<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GamepadActivity">


    <ImageButton
        android:id="@+id/guide_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/rounded_buttons"
        android:contentDescription="@string/guide_button"
        android:src="@drawable/ic_baseline_info_24"
        app:layout_constraintEnd_toStartOf="@+id/X_Button"
        app:layout_constraintStart_toEndOf="@+id/left_stick"
        app:layout_constraintTop_toTopOf="@+id/Y_Button" />

    <ImageButton
        android:id="@+id/back_button"
        android:layout_width="40dp"
        android:layout_height="30dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/rounded_buttons"
        android:src="@drawable/ic_baseline_arrow_left_24"
        app:layout_constraintEnd_toStartOf="@+id/guide_button"
        app:layout_constraintTop_toBottomOf="@+id/guide_button" />

    <ImageButton
        android:id="@+id/start_button"
        android:layout_width="40dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded_buttons"
        android:src="@drawable/ic_baseline_arrow_right_24"
        app:layout_constraintStart_toEndOf="@+id/guide_button"
        app:layout_constraintTop_toBottomOf="@+id/guide_button" />


    <io.github.controlwear.virtual.joystick.android.JoystickView
        android:id="@+id/left_stick"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="50dp"
        app:JV_borderColor="@color/accentColor"
        app:JV_borderWidth="4dp"
        app:JV_buttonColor="@color/accentColorFocused"
        app:JV_buttonSizeRatio="15%"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <io.github.controlwear.virtual.joystick.android.JoystickView
        android:id="@+id/right_stick"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="32dp"
        app:JV_borderColor="@color/accentColor"
        app:JV_borderWidth="4dp"
        app:JV_buttonColor="@color/accentColorFocused"
        app:JV_buttonSizeRatio="15%"
        app:layout_constraintEnd_toStartOf="@+id/A_Button"
        app:layout_constraintTop_toBottomOf="@+id/X_Button" />

    <com.codertainment.dpadview.DPadView
        android:id="@+id/dpad"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="16dp"
        android:src="@drawable/ic_gamepad_black"
        app:centerCircleNormalColor="@color/accentColor"
        app:centerCirclePressedColor="@color/accentColorFocused"
        app:layout_constraintStart_toEndOf="@+id/left_stick"
        app:layout_constraintTop_toBottomOf="@+id/left_stick"
        app:normalColor="@color/material_on_surface_stroke"
        app:pressedColor="@color/accentColorFocused" />

    <ImageButton
        android:id="@+id/A_Button"
        android:layout_width="50dp"
        android:layout_height="0dp"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/cross"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="@+id/Y_Button"
        app:layout_constraintStart_toStartOf="@+id/Y_Button"
        app:layout_constraintTop_toBottomOf="@+id/Y_Button"
        app:srcCompat="@drawable/ic_cross_black_24dp"
        android:background="@drawable/rounded_buttons"/>

    <ImageButton
        android:id="@+id/B_Button"
        android:layout_width="50dp"
        android:layout_height="0dp"
        android:contentDescription="@string/circle"
        app:layout_constraintBottom_toTopOf="@+id/A_Button"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintStart_toEndOf="@+id/Y_Button"
        app:layout_constraintTop_toBottomOf="@+id/Y_Button"
        app:srcCompat="@drawable/ic_circle_black_24dp"
        android:background="@drawable/rounded_buttons"/>

    <ImageButton
        android:id="@+id/X_Button"
        android:layout_width="50dp"
        android:layout_height="0dp"
        android:contentDescription="@string/square"
        app:layout_constraintBottom_toTopOf="@+id/A_Button"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/Y_Button"
        app:layout_constraintTop_toBottomOf="@+id/Y_Button"
        app:srcCompat="@drawable/ic_square_black_24dp"
        android:background="@drawable/rounded_buttons"/>

    <ImageButton
        android:id="@+id/Y_Button"
        android:layout_width="50dp"
        android:layout_height="0dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="100dp"
        android:contentDescription="@string/triangle"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_triangle_black_24dp"
        android:background="@drawable/rounded_buttons"/>


    <ImageButton
        android:id="@+id/left_trigger"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/rounded_buttons"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/right_trigger"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/rounded_buttons"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageButton
        android:id="@+id/left_bumper"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginEnd="54dp"
        android:background="@drawable/rounded_buttons"
        app:layout_constraintBottom_toTopOf="@+id/right_trigger"
        app:layout_constraintEnd_toEndOf="@+id/right_trigger" />

    <ImageButton
        android:id="@+id/right_bumper"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="54dp"
        android:background="@drawable/rounded_buttons"
        app:layout_constraintBottom_toTopOf="@+id/left_trigger"
        app:layout_constraintStart_toStartOf="@+id/left_trigger" />

    <TextView
        android:id="@+id/reportCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>